Fixed padding in order to let the image overflows

--- a/scss/_section_details-content.scss
+++ b/scss/_section_details-content.scss
@@ -2,10 +2,32 @@
 
 .section_details-content {
   padding-top: 31px;
+  padding-inline-end: 0;
+}
+
+.details_content-header,
+.photo_information-list,
+.details_content-figure-picture active-picture,
+.details_content-summary-article {
+  padding-inline-end: 14px;
 }
 
 .details_content-figure,
 .image_list,
 .photo_information-list {
   display: grid;
+}
+
+// For desktop.
+@media (min-width: $break-point-large) {
+  .details_content-header,
+  .photo_information-list,
+  .details_content-figure-picture active-picture,
+  .details_content-summary-article {
+    padding-inline-end: 0;
+  }
+
+  .section_details-content {
+    padding-inline-end: 135px;
+  }
 }
